# cmd/docs/swagger.json
@@ -84,6 +84,15 @@
                     "Organisations"
                 ],
                 "summary": "Get all organisations",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "API key",
+                        "name": "X-API-Key",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -318,6 +327,20 @@
                 "summary": "Create a new prospect",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "Bearer token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Organisation Id",
+                        "name": "orgId",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "description": "Prospect data",
                         "name": "prospect",
                         "in": "body",
@@ -365,9 +388,23 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Prospect ID",
-                        "name": "id",
+                        "description": "Prospect UID",
+                        "name": "uid",
                         "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Bearer token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Organisation Id",
+                        "name": "orgId",
+                        "in": "header",
                         "required": true
                     }
                 ],
@@ -418,6 +455,20 @@
                         "description": "Prospect UId",
                         "name": "uid",
                         "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Bearer token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Organisation Id",
+                        "name": "orgId",
+                        "in": "header",
                         "required": true
                     },
                     {
@@ -481,8 +532,8 @@
                     },
                     {
                         "type": "string",
-                        "description": "orgId",
-                        "name": "Organisation",
+                        "description": "Organisation Id",
+                        "name": "orgId",
                         "in": "header",
                         "required": true
                     }
@@ -533,8 +584,8 @@
                     },
                     {
                         "type": "string",
-                        "description": "orgId",
-                        "name": "Organisation",
+                        "description": "Organisation Id",
+                        "name": "orgId",
                         "in": "header",
                         "required": true
                     },
@@ -641,15 +692,6 @@
                     "Users"
                 ],
                 "summary": "Get user roles",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Organisation ID",
-                        "name": "orgId",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -716,8 +758,8 @@
                     },
                     {
                         "type": "string",
-                        "description": "orgId",
-                        "name": "Organisation",
+                        "description": "Organisation Id",
+                        "name": "orgId",
                         "in": "header",
                         "required": true
                     },
@@ -795,8 +837,8 @@
                     },
                     {
                         "type": "string",
-                        "description": "orgId",
-                        "name": "Organisation",
+                        "description": "Organisation Id",
+                        "name": "orgId",
                         "in": "header",
                         "required": true
                     },
